--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "ejs": "^3.1.3",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
-        "ffmpeg-static": "^4.3.0",
+        "ffmpeg-static": "^4.4.1",
         "figlet": "^1.5.0",
         "fortnite": "^4.3.2",
         "gamedig": "^3.0.0",
@@ -59,7 +59,8 @@
         "moment": "^2.26.0",
         "mongoose": "^5.9.25",
         "ms": "^2.1.3",
-        "string-sanitizer": "^1.1.1"
+        "string-sanitizer": "^1.1.1",
+        "ytdl-core": "^4.10.0"
     },
     "devDependencies": {
         "eslint": "^7.5.0"
